# ofact

./: .dockerignore  .env  .gitignore  404.html  CHANGELOG.md  CITATION.cff  CODEOWNER.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PUBLICATIONS.md  README.md  SECURITY.md  index.html  mkdocs.yml  pyjabber.db  pyproject.toml  requirements.txt  sitemap.xml
.github/: PULL_REQUEST.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  submit_question.yml
.github/workflows/: deploy.yml
dev/: toml_to_txt.py
dev/How to create a class diagramm/: index.html
dev/How to create the documentation/: index.html
dev/How to setup a submodule/: index.html
dev/Setup-Guid_general/: index.html
dev/arc42_documentation/: index.html
dev/docker/: index.html
dev/setting_up_project/: index.html
dev/setup_guide/: index.html
docs/: README.md  index.md
docs/.run_code_documentation/: Create Code Documentation Bash.run.xml  Create Code Documentation Power Shell.run.xml
docs/dev/: How to create a class diagramm.md  How to create the documentation.md  How to setup a submodule.md  Setup-Guid_general.md  arc42_documentation.md  setting_up_project.md  setup_guide.md  toml_to_txt.py
docs/env/: data_integration.md  environment.md
docs/planning_services/: planning_services.md  scenario_analytics.md
docs/projects/: projects.md
docs/source/: code_creation.rst  conf.py  environment.rst  general.rst  index.rst  planning_services.rst  tree.html  tree.rst  twin.rst  welcome.html  welcome.rst
docs/twin/: agent_control.md  change_handler.md  digital_twin.md  repository_services.md  state_model.md
env/data_integration/: index.html
env/environment/: index.html
env/simulation/: index.html
env/work_instruction/: index.html
ofact/: README.md  __init__.py  helpers.py  requirements.txt  settings.py
ofact/env/: README.md  environment.py  helper.py  planned_event_queue.py
ofact/planning_services/: README.md
ofact/twin/: README.md  settings.py  utils.py
overrides/: home.html
planning_services/planning_services/: index.html
planning_services/scenario_analytics/: index.html
planning_services/scenario_generation/: index.html
planning_services/scenario_optimization/: index.html
profile/: README.md
projects/: README.md  helper.py
projects/bicycle_factory/: index.html
projects/bicycle_world/: main.py  requirements.txt  settings.py
projects/data_detectives/: 0_Aufgabe einführen.ipynb  0_Bicycle Factory vorstellen.ipynb  1_Aufgabe einführen.ipynb  1_Bicycle Factory vorstellen.ipynb  2_Schwachstellen erkennen.ipynb  README.md  config.yaml  (+1 more)
search/: search_index.json
site/: 404.html  IssueTracker.xlsx  index.html  sitemap.xml
(+359 files in other folders)
